fix: [RGOeX-1323] Alignment rows in modal window

--- a/paragon/blocks/_gradebook.scss
+++ b/paragon/blocks/_gradebook.scss
@@ -149,3 +149,8 @@
         }
     }
 }
+
+.grade-history-header {
+    min-width: 170px;
+    padding-right: 30px !important;
+}
